// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typerGenerator > TypeGenerator getFullText 1`] = `
"import type { TestDto2, Test32145, ApiResponse, Pet } from "./models";
export const petFindByStatusGetQueryParamsStatusEnumLabel = {
    Available: '',
    Pending: '',
    Sold: ''
};
export const PetFindByStatusGetQueryParamsStatusEnum = {
    Available: 'available',
    Pending: 'pending',
    Sold: 'sold'
} as const;
export const PetFindByStatusGetQueryParamsStatusEnumOption = [{
    label: petFindByStatusGetQueryParamsStatusEnumLabel.Available,
    value: PetFindByStatusGetQueryParamsStatusEnum.Available
}, {
    label: petFindByStatusGetQueryParamsStatusEnumLabel.Pending,
    value: PetFindByStatusGetQueryParamsStatusEnum.Pending
}, {
    label: petFindByStatusGetQueryParamsStatusEnumLabel.Sold,
    value: PetFindByStatusGetQueryParamsStatusEnum.Sold
}];

/**
 * @tag pet
 * @description Everything about your Pets
 */
export namespace Pet {
    /**
     * @description OK
     */
    export type TestPostMutationResponse = TestDto2;
    export type TestPostError = unknown;
    /**
     * @description OK
     */
    export type TestPutMutationResponse = TestDto2;
    export type TestPutError = unknown;
    export type DelByTestMutationRequest = Array<number>;
    /**
     * @description OK
     */
    export type DelByTestMutationResponse = Test32145;
    export type DelByTestError = unknown;

    /**
     * @description queryParams
     */
    export interface TestIdGetQueryParams {
        /**
         * @description fields
         */
        fields?: Array<string>;
        /**
         * @description 页码 (0..N)，默认为0
         */
        page: number;
        /**
         * @description 每页显示的数目,默认为10
         */
        size: number;
    }

    /**
     * @description pathParams
     */
    export interface TestIdGetPathParams {
        /**
         * @description test-id
         */
        testId?: number;
        /**
         * @description test-id
         */
        testId2?: string;
    }

    /**
     * @description OK
     */
    export type TestIdGetQueryResponse = TestDto2;
    export type TestIdGetError = unknown;

    /**
     * @description pathParams
     */
    export interface UploadImagePostPathParams {
        /**
         * @description ID of pet to update
         */
        petId: number;
    }

    export interface UploadImagePostMutationRequest {
        /**
         * @description Additional data to pass to server
         */
        additionalMetadata?: string;
        /**
         * @description file to upload
         */
        file?: string;
    }

    /**
     * @description successful operation
     */
    export type UploadImagePostMutationResponse = ApiResponse;
    export type UploadImagePostError = unknown;
    export type CreateError = unknown;
    export type CreateMutationResponse = unknown;
    export type UpdateError = unknown;
    export type UpdateMutationResponse = unknown;

    /**
     * @description queryParams
     */
    export interface FindByStatusGetQueryParams {
        /**
         * @description Status values that need to be considered for filter
         */
        status: Array<PetFindByStatusGetQueryParamsStatusEnum>;
    }

    /**
     * @description successful operation
     */
    export type FindByStatusGetQueryResponse = Pet[];
    export type FindByStatusGetError = unknown;

    /**
     * @description queryParams
     */
    export interface FindByTagsGetQueryParams {
        /**
         * @description Tags to filter by
         */
        tags: Array<string>;
    }

    /**
     * @description successful operation
     */
    export type FindByTagsGetQueryResponse = Pet[];
    export type FindByTagsGetError = unknown;

    /**
     * @description pathParams
     */
    export interface FindByPetIdPathParams {
        /**
         * @description ID of pet to return
         */
        petId: number;
    }

    /**
     * @description successful operation
     */
    export type FindByPetIdQueryResponse = Pet;
    export type FindByPetIdError = unknown;

    /**
     * @description pathParams
     */
    export interface PetIdPostPathParams {
        /**
         * @description ID of pet that needs to be updated
         */
        petId: number;
    }

    export interface PetIdPostMutationRequest {
        /**
         * @description Updated name of the pet
         */
        name?: string;
        /**
         * @description Updated status of the pet
         */
        status?: string;
    }

    export type PetIdPostError = unknown;
    export type PetIdPostMutationResponse = unknown;

    /**
     * @description pathParams
     */
    export interface DelByPetIdPathParams {
        /**
         * @description Pet id to delete
         */
        petId: number;
    }

    export type DelByPetIdError = unknown;
    export type DelByPetIdMutationResponse = unknown;
}

import type { Order } from "./models";

/**
 * @tag store
 * @description Access to Petstore orders
 */
export namespace Store {
    export type CreateMutationRequest = Order;
    /**
     * @description successful operation
     */
    export type CreateMutationResponse = Order;
    export type CreateError = unknown;

    /**
     * @description pathParams
     */
    export interface FindByOrderIdPathParams {
        /**
         * @description ID of pet that needs to be fetched
         */
        orderId: number;
    }

    /**
     * @description successful operation
     */
    export type FindByOrderIdQueryResponse = Order;
    export type FindByOrderIdError = unknown;

    /**
     * @description pathParams
     */
    export interface DelByOrderIdPathParams {
        /**
         * @description ID of the order that needs to be deleted
         */
        orderId: number;
    }

    export type DelByOrderIdError = unknown;
    export type DelByOrderIdMutationResponse = unknown;

    /**
     * @description successful operation
     */
    export interface InventoryGetQueryResponse {
        [key: string]: unknown;
    }

    export type InventoryGetError = unknown;
}

import type { User } from "./models";

/**
 * @tag user
 * @description Operations about user
 */
export namespace User {
    export type CreateWithArrayPostError = unknown;
    export type CreateWithArrayPostMutationResponse = unknown;
    export type CreateWithListPostError = unknown;
    export type CreateWithListPostMutationResponse = unknown;

    /**
     * @description pathParams
     */
    export interface FindByUsernamePathParams {
        /**
         * @description The name that needs to be fetched. Use user1 for testing. 
         */
        username: string;
    }

    /**
     * @description successful operation
     */
    export type FindByUsernameQueryResponse = User;
    export type FindByUsernameError = unknown;

    /**
     * @description pathParams
     */
    export interface UsernamePutPathParams {
        /**
         * @description name that need to be updated
         */
        username: string;
    }

    export type UsernamePutMutationRequest = User;
    export type UsernamePutError = unknown;
    export type UsernamePutMutationResponse = unknown;

    /**
     * @description pathParams
     */
    export interface DelByUsernamePathParams {
        /**
         * @description The name that needs to be deleted
         */
        username: string;
    }

    export type DelByUsernameError = unknown;
    export type DelByUsernameMutationResponse = unknown;

    /**
     * @description queryParams
     */
    export interface LoginGetQueryParams {
        /**
         * @description The user name for login
         */
        username: string;
        /**
         * @description The password for login in clear text
         */
        password: string;
    }

    /**
     * @description successful operation
     */
    export type LoginGetQueryResponse = string;
    export type LoginGetError = unknown;
    export type LogoutGetError = unknown;
    export type LogoutGetQueryResponse = unknown;
    export type CreateMutationRequest = User;
    export type CreateError = unknown;
    export type CreateMutationResponse = unknown;
}

import type { Testdata } from "./Testdata";

export interface Test32145 {
    /**
     * @description description
     */
    code?: number;
    meta?: Testdata;
}

/**
 * @description description
 */
export const test3214ColumnTypeEnumLabel = {
    Char: '',
    Char2: '',
    Char3: ''
};
/**
 * @description description
 */
export const Test3214ColumnTypeEnum = {
    Char: 'CHAR',
    Char2: 'CHAR2',
    Char3: 'CHAR3'
} as const;
/** description */
export const Test3214ColumnTypeEnumOption = [{
    label: test3214ColumnTypeEnumLabel.Char,
    value: Test3214ColumnTypeEnum.Char
}, {
    label: test3214ColumnTypeEnumLabel.Char2,
    value: Test3214ColumnTypeEnum.Char2
}, {
    label: test3214ColumnTypeEnumLabel.Char3,
    value: Test3214ColumnTypeEnum.Char3
}];

export interface Test3214 {
    /**
     * @description 默认值
     */
    columnDefault?: string;
    /**
     * @description description
     */
    columnLength?: number;
    /**
     * @description description
     */
    columnName?: string;
    /**
     * @description description
     */
    columnRemark?: string;
    /**
     * @description description
     */
    columnScale?: number;
    /**
     * @description description
     */
    columnType?: Test3214ColumnTypeEnum;
    /**
     * @description description
     */
    delFlag?: boolean;
    formId?: number;
    /**
     * @description id
     */
    id?: number;
    /**
     * @description description
     */
    notNull?: boolean;
}

export interface Testdata {
    /**
     * @description description
     */
    number?: number;
    /**
     * @description description
     */
    numberOfElements?: number;
    /**
     * @description description
     */
    totalElements?: number;
    /**
     * @description description
     */
    totalPages?: number;
}

export interface Sort {
    empty?: boolean;
    sorted?: boolean;
    unsorted?: boolean;
}

import type { Test3214 } from "./Test3214";

export interface TestDto3 {
    test3214?: Test3214[];
}

import type { TestDto3 } from "./TestDto3";
import type { Testdata } from "./Testdata";

export interface TestDto2 {
    content?: TestDto3;
    meta?: Testdata;
}

export interface Test321 {
    id?: number;
}

import type { Test321 } from "./Test321";

export interface TestDto {
    /**
     * @description test321
     */
    test321?: Test321[];
}

import type { ApiResponse } from "./ApiResponse";

export interface RefList {
    content?: ApiResponse;
    /**
     * @description string
     */
    string?: string;
    name?: string;
    /**
     * @description title
     */
    title?: string;
    /**
     * @description type
     */
    type?: string;
}

export interface ApiResponse {
    code?: number;
    type?: string;
    message?: string;
}

export interface Category {
    id?: number;
    name?: string;
}

import type { Category } from "./Category";
import type { Tag } from "./Tag";
/**
 * @description pet status in the store
 */
export const petStatusEnumLabel = {
    Available: '',
    Pending: '',
    Sold: ''
};
/**
 * @description pet status in the store
 */
export const PetStatusEnum = {
    Available: 'available',
    Pending: 'pending',
    Sold: 'sold'
} as const;
/** pet status in the store */
export const PetStatusEnumOption = [{
    label: petStatusEnumLabel.Available,
    value: PetStatusEnum.Available
}, {
    label: petStatusEnumLabel.Pending,
    value: PetStatusEnum.Pending
}, {
    label: petStatusEnumLabel.Sold,
    value: PetStatusEnum.Sold
}];

export interface Pet {
    id?: number;
    category?: Category;
    name: string;
    photoUrls: Array<string>;
    tags?: Tag[];
    /**
     * @description pet status in the store
     */
    status?: PetStatusEnum;
}

export interface Tag {
    id?: number;
    name?: string;
}

/**
 * @description Order Status
 */
export const orderStatusEnumLabel = {
    Placed: '',
    Approved: '',
    Delivered: ''
};
/**
 * @description Order Status
 */
export const OrderStatusEnum = {
    Placed: 'placed',
    Approved: 'approved',
    Delivered: 'delivered'
} as const;
/** Order Status */
export const OrderStatusEnumOption = [{
    label: orderStatusEnumLabel.Placed,
    value: OrderStatusEnum.Placed
}, {
    label: orderStatusEnumLabel.Approved,
    value: OrderStatusEnum.Approved
}, {
    label: orderStatusEnumLabel.Delivered,
    value: OrderStatusEnum.Delivered
}];

export interface Order {
    id?: number;
    petId?: number;
    quantity?: number;
    shipDate?: string;
    /**
     * @description Order Status
     */
    status?: OrderStatusEnum;
    complete?: boolean;
}

export interface User {
    id?: number;
    username?: string;
    firstName?: string;
    lastName?: string;
    email?: string;
    password?: string;
    phone?: string;
    /**
     * @description User Status
     */
    userStatus?: number;
}

export * from "./Test32145";
export * from "./Test3214";
export * from "./Testdata";
export * from "./Sort";
export * from "./TestDto3";
export * from "./TestDto2";
export * from "./Test321";
export * from "./TestDto";
export * from "./RefList";
export * from "./ApiResponse";
export * from "./Category";
export * from "./Pet";
export * from "./Tag";
export * from "./Order";
export * from "./User";
"
`;

exports[`typerGenerator > compare TypeGenerator getFullText 1`] = `
"import type { TestDto2, Test32145, ApiResponse, Pet } from "./models";
export const petFindByStatusGetQueryParamsStatusEnumLabel = {
    Available: '',
    Pending: '',
    Sold: ''
};
export const PetFindByStatusGetQueryParamsStatusEnum = {
    Available: 'available',
    Pending: 'pending',
    Sold: 'sold'
} as const;
export const PetFindByStatusGetQueryParamsStatusEnumOption = [{
    label: petFindByStatusGetQueryParamsStatusEnumLabel.Available,
    value: PetFindByStatusGetQueryParamsStatusEnum.Available
}, {
    label: petFindByStatusGetQueryParamsStatusEnumLabel.Pending,
    value: PetFindByStatusGetQueryParamsStatusEnum.Pending
}, {
    label: petFindByStatusGetQueryParamsStatusEnumLabel.Sold,
    value: PetFindByStatusGetQueryParamsStatusEnum.Sold
}];

/**
 * @tag pet
 * @description Everything about your Pets
 * @UUID type-pet
 */
export namespace NewPet {
    /**
     * @description OK
     */
    export type TestPostMutationResponse = TestDto2;
    export type TestPostError = unknown;
    /**
     * @description OK
     */
    export type TestPutMutationResponse = TestDto2;
    export type TestPutError = unknown;
    export type DelByTestMutationRequest = Array<number>;
    /**
     * @description OK
     */
    export type DelByTestMutationResponse = Test32145;
    export type DelByTestError = unknown;

    /**
     * @description queryParams
     */
    export interface TestIdGetQueryParams {
        /**
         * @description fields
         */
        fields?: Array<string>;
        /**
         * @description 页码 (0..N)，默认为0
         */
        page: number;
        /**
         * @description 每页显示的数目,默认为10
         */
        size: number;
    }

    /**
     * @description pathParams
     */
    export interface TestIdGetPathParams {
        /**
         * @description test-id
         */
        testId?: number;
        /**
         * @description test-id
         */
        testId2?: string;
    }

    /**
     * @description OK
     */
    export type TestIdGetQueryResponse = TestDto2;
    export type TestIdGetError = unknown;

    /**
     * @description pathParams
     */
    export interface UploadImagePostPathParams {
        /**
         * @description ID of pet to update
         */
        petId: number;
    }

    export interface UploadImagePostMutationRequest {
        /**
         * @description Additional data to pass to server
         */
        additionalMetadata?: string;
        /**
         * @description file to upload
         */
        file?: string;
    }

    /**
     * @description successful operation
     */
    export type UploadImagePostMutationResponse = ApiResponse;
    export type UploadImagePostError = unknown;
    export type CreateError = unknown;
    export type CreateMutationResponse = unknown;
    export type UpdateError = unknown;
    export type UpdateMutationResponse = unknown;

    /**
     * @description queryParams
     */
    export interface FindByStatusGetQueryParams {
        /**
         * @description Status values that need to be considered for filter
         */
        status: Array<PetFindByStatusGetQueryParamsStatusEnum>;
    }

    /**
     * @description successful operation
     */
    export type FindByStatusGetQueryResponse = Pet[];
    export type FindByStatusGetError = unknown;

    /**
     * @description queryParams
     */
    export interface FindByTagsGetQueryParams {
        /**
         * @description Tags to filter by
         */
        tags: Array<string>;
    }

    /**
     * @description successful operation
     */
    export type FindByTagsGetQueryResponse = Pet[];
    export type FindByTagsGetError = unknown;

    /**
     * @description pathParams
     */
    export interface FindByPetIdPathParams {
        /**
         * @description ID of pet to return
         */
        petId: number;
    }

    /**
     * @description successful operation
     */
    export type FindByPetIdQueryResponse = Pet;
    export type FindByPetIdError = unknown;

    /**
     * @description pathParams
     */
    export interface PetIdPostPathParams {
        /**
         * @description ID of pet that needs to be updated
         */
        petId: number;
    }

    export interface PetIdPostMutationRequest {
        /**
         * @description Updated name of the pet
         */
        name?: string;
        /**
         * @description Updated status of the pet
         */
        status?: string;
    }

    export type PetIdPostError = unknown;
    export type PetIdPostMutationResponse = unknown;

    /**
     * @description pathParams
     */
    export interface DelByPetIdPathParams {
        /**
         * @description Pet id to delete
         */
        petId: number;
    }

    export type DelByPetIdError = unknown;
    export type DelByPetIdMutationResponse = unknown;
}

import type { Order } from "./models";

/**
 * @tag store
 * @description Access to Petstore orders
 * @UUID type-store
 */
export namespace Store {
    export type CreateMutationRequest = Order;
    /**
     * @description successful operation
     */
    export type CreateMutationResponse = Order;
    export type CreateError = unknown;

    /**
     * @description pathParams
     */
    export interface FindByOrderIdPathParams {
        /**
         * @description ID of pet that needs to be fetched
         */
        orderId: number;
    }

    /**
     * @description successful operation
     */
    export type FindByOrderIdQueryResponse = Order;
    export type FindByOrderIdError = unknown;

    /**
     * @description pathParams
     */
    export interface DelByOrderIdPathParams {
        /**
         * @description ID of the order that needs to be deleted
         */
        orderId: number;
    }

    export type DelByOrderIdError = unknown;
    export type DelByOrderIdMutationResponse = unknown;

    /**
     * @description successful operation
     */
    export interface InventoryGetQueryResponse {
        [key: string]: unknown;
    }

    export type InventoryGetError = unknown;
}

import type { User } from "./models";

/**
 * @tag user
 * @description Operations about user
 * @UUID type-user
 */
export namespace User {
    export type CreateWithArrayPostError = unknown;
    export type CreateWithArrayPostMutationResponse = unknown;
    export type CreateWithListPostError = unknown;
    export type CreateWithListPostMutationResponse = unknown;

    /**
     * @description pathParams
     */
    export interface FindByUsernamePathParams {
        /**
         * @description The name that needs to be fetched. Use user1 for testing. 
         */
        username: string;
    }

    /**
     * @description successful operation
     */
    export type FindByUsernameQueryResponse = User;
    export type FindByUsernameError = unknown;

    /**
     * @description pathParams
     */
    export interface UsernamePutPathParams {
        /**
         * @description name that need to be updated
         */
        username: string;
    }

    export type UsernamePutMutationRequest = User;
    export type UsernamePutError = unknown;
    export type UsernamePutMutationResponse = unknown;

    /**
     * @description pathParams
     */
    export interface DelByUsernamePathParams {
        /**
         * @description The name that needs to be deleted
         */
        username: string;
    }

    export type DelByUsernameError = unknown;
    export type DelByUsernameMutationResponse = unknown;

    /**
     * @description queryParams
     */
    export interface LoginGetQueryParams {
        /**
         * @description The user name for login
         */
        username: string;
        /**
         * @description The password for login in clear text
         */
        password: string;
    }

    /**
     * @description successful operation
     */
    export type LoginGetQueryResponse = string;
    export type LoginGetError = unknown;
    export type LogoutGetError = unknown;
    export type LogoutGetQueryResponse = unknown;
    export type CreateMutationRequest = User;
    export type CreateError = unknown;
    export type CreateMutationResponse = unknown;
}

import type { Testdata } from "./Testdata";

/**
 * @UUID type-Test32145
 */
export interface Test32145 {
    /**
     * @description description
     */
    code?: number;
    /**
     * @UUID type-Testdata
     */
    meta?: Testdata;
}

/**
 * @description description
 */
export const test3214ColumnTypeEnumLabel = {
    Char: '',
    Char2: '',
    Char3: ''
};
/**
 * @description description
 */
export const Test3214ColumnTypeEnum = {
    Char: 'CHAR',
    Char2: 'CHAR2',
    Char3: 'CHAR3'
} as const;
/** description */
export const Test3214ColumnTypeEnumOption = [{
    label: test3214ColumnTypeEnumLabel.Char,
    value: Test3214ColumnTypeEnum.Char
}, {
    label: test3214ColumnTypeEnumLabel.Char2,
    value: Test3214ColumnTypeEnum.Char2
}, {
    label: test3214ColumnTypeEnumLabel.Char3,
    value: Test3214ColumnTypeEnum.Char3
}];

/**
 * @UUID type-Test3214
 */
export interface Test3214 {
    /**
     * @description 默认值
     */
    columnDefault?: string;
    /**
     * @description description
     */
    columnLength?: number;
    /**
     * @description description
     */
    columnName?: string;
    /**
     * @description description
     */
    columnRemark?: string;
    /**
     * @description description
     */
    columnScale?: number;
    /**
     * @description description
     */
    columnType?: Test3214ColumnTypeEnum;
    /**
     * @description description
     */
    delFlag?: boolean;
    formId?: number;
    /**
     * @description id
     */
    id?: number;
    /**
     * @description description
     */
    notNull?: boolean;
}

/**
 * @UUID type-Testdata
 */
export interface Testdata {
    /**
     * @description description
     */
    number?: number;
    /**
     * @description description
     */
    numberOfElements?: number;
    /**
     * @description description
     */
    totalElements?: number;
    /**
     * @description description
     */
    totalPages?: number;
}

/**
 * @UUID type-Sort
 */
export interface Sort {
    empty?: boolean;
    sorted?: boolean;
    unsorted?: boolean;
}

import type { Test3214 } from "./Test3214";

/**
 * @UUID type-TestDto3
 */
export interface TestDto3 {
    test3214?: Test3214[];
}

import type { TestDto3 } from "./TestDto3";
import type { Testdata } from "./Testdata";

/**
 * @UUID type-TestDto2
 */
export interface TestDto2 {
    /**
     * @UUID type-TestDto3
     */
    content?: TestDto3;
    /**
     * @UUID type-Testdata
     */
    meta?: Testdata;
}

/**
 * @UUID type-Test321
 */
export interface Test321 {
    id?: number;
}

import type { Test321 } from "./Test321";

/**
 * @UUID type-TestDto
 */
export interface NewTestDto {
    /**
     * @description test321
     */
    test321?: Test321[];
}

import type { ApiResponse } from "./ApiResponse";

/**
 * @UUID type-RefList
 */
export interface RefList {
    /**
     * @UUID type-ApiResponse
     */
    content?: ApiResponse;
    /**
     * @description string
     */
    string?: string;
    name?: string;
    /**
     * @description title
     */
    title?: string;
    /**
     * @description type
     */
    type?: string;
}

/**
 * @UUID type-ApiResponse
 */
export interface ApiResponse {
    code?: number;
    type?: string;
    message?: string;
}

/**
 * @UUID type-Category
 */
export interface NewCategory {
    id?: number;
    name?: string;
}

import type { NewCategory } from "./NewCategory";
import type { Tag } from "./Tag";
/**
 * @description pet status in the store
 */
export const petStatusEnumLabel = {
    Available: '',
    Pending: '',
    Sold: ''
};
/**
 * @description pet status in the store
 */
export const PetStatusEnum = {
    Available: 'available',
    Pending: 'pending',
    Sold: 'sold'
} as const;
/** pet status in the store */
export const PetStatusEnumOption = [{
    label: petStatusEnumLabel.Available,
    value: PetStatusEnum.Available
}, {
    label: petStatusEnumLabel.Pending,
    value: PetStatusEnum.Pending
}, {
    label: petStatusEnumLabel.Sold,
    value: PetStatusEnum.Sold
}];

/**
 * @UUID type-Pet
 */
export interface Pet {
    id?: number;
    /**
     * @UUID type-Category
     */
    category?: NewCategory;
    name: string;
    photoUrls: Array<string>;
    tags?: Tag[];
    /**
     * @description pet status in the store
     */
    status?: PetStatusEnum;
}

/**
 * @UUID type-Tag
 */
export interface Tag {
    id?: number;
    name?: string;
}

/**
 * @description Order Status
 */
export const orderStatusEnumLabel = {
    Placed: '',
    Approved: '',
    Delivered: ''
};
/**
 * @description Order Status
 */
export const OrderStatusEnum = {
    Placed: 'placed',
    Approved: 'approved',
    Delivered: 'delivered'
} as const;
/** Order Status */
export const OrderStatusEnumOption = [{
    label: orderStatusEnumLabel.Placed,
    value: OrderStatusEnum.Placed
}, {
    label: orderStatusEnumLabel.Approved,
    value: OrderStatusEnum.Approved
}, {
    label: orderStatusEnumLabel.Delivered,
    value: OrderStatusEnum.Delivered
}];

/**
 * @UUID type-Order
 */
export interface Order {
    id?: number;
    petId?: number;
    quantity?: number;
    shipDate?: string;
    /**
     * @description Order Status
     */
    status?: OrderStatusEnum;
    complete?: boolean;
}

/**
 * @UUID type-User
 */
export interface User {
    id?: number;
    username?: string;
    firstName?: string;
    lastName?: string;
    email?: string;
    password?: string;
    phone?: string;
    /**
     * @description User Status
     */
    userStatus?: number;
}

export * from "./Test32145";
export * from "./Test3214";
export * from "./Testdata";
export * from "./Sort";
export * from "./TestDto3";
export * from "./TestDto2";
export * from "./Test321";
export * from "./NewTestDto";
export * from "./RefList";
export * from "./ApiResponse";
export * from "./NewCategory";
export * from "./Pet";
export * from "./Tag";
export * from "./Order";
export * from "./User";
"
`;
